# likeli-kalshi2

./: .gitignore  Anchor.toml  LANDING_PAGE_README.md  README.md  analyze_liquidity.cjs  analyze_markets.cjs  api-proxy-package.json  api-proxy.cjs  api-proxy.js  check_tx_status.cjs  debug_route.cjs  dflow_response.json  dflow_sample.json  env.example.txt  fix_trade_protocol.cjs  hardhat.config.js  index.html  landing-page-standalone.html  markets_all.json  markets_top.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scan_endpoints.cjs  tailwind.config.js  test_order_endpoint.cjs  test_quotes.cjs  test_usdc_mint.cjs  tsconfig.server.json  verify_apis.cjs  vite.config.js
apps/api/: package-lock.json  package.json
apps/web/: package-lock.json  package.json
contracts/: LikeliVault.sol  PolymarketAdapter.sol
contracts/mocks/: MockERC20.sol
docs/: depositor-guide.mdx  fund-completion.mdx  fund-lifecycle.mdx  introduction.mdx  making-predictions.mdx  managing-a-fund.mdx  predictor-guide.mdx
prisma/: schema.prisma
programs/vaults/: Cargo.toml
programs/vaults/src/: errors.rs  lib.rs  state.rs
programs/vaults/src/instructions/: cancel_withdrawal.rs  create_fund.rs  deposit.rs  end_trading.rs  execute_trade.rs  finalize_close.rs  initialize_protocol.rs  mod.rs  process_epoch.rs  redeem.rs  request_withdrawal.rs  start_trading.rs  withdraw_early.rs  withdraw_open.rs
scripts/: deploy.js
server/: index.ts
src/: App.css  App.jsx  index.css  main.jsx
src/components/: Button.css  Button.jsx  ChartModal.css  ChartModal.jsx  EventCard.css  (+20 more)
(+65 files in other folders)
