[package]
name = "vaults"
version = "0.1.0"
description = "Likeli Vaults - Prediction Market Vault Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaults"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
